added a delete button

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,13 @@
 .logo {
     border-radius: 50%;
 }
+
+.deleteButton {
+    border-radius: 25% !important;
+    width: 20px;
+    height: auto;
+}
+
+.shadow {
+    box-shadow: 2px 2px 5px !important;
+}
