--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,13 @@
 .shadow {
-    box-shadow: 2px 2px 5px !important;
+  box-shadow: 2px 2px 5px !important;
+}
+
+#jobModal {
+  width: 350px;
+  text-align: center;
+}
+
+#jobSubmitButton {
+  background-color: blueviolet;
+  color: white;
 }
