added a button to the delete modal for modal closure

--- a/src/components/JobModal/JobModal.css
+++ b/src/components/JobModal/JobModal.css
@@ -7,3 +7,9 @@
     background-color: blueviolet;
     color: white;
   }
+
+  .exitButton {
+    position: absolute !important;
+    top: 10px;
+    right: 10px;
+  }
