--- a/src/components/DeleteModal/DeleteModal.css
+++ b/src/components/DeleteModal/DeleteModal.css
@@ -2,3 +2,9 @@
     width: 350px;
     text-align: center;
   }
+
+  .exitButton {
+    position: absolute !important;
+    top: 10px;
+    right: 10px;
+  }
